# uir-gateway

./: LICENSE  README.md  pyproject.toml  uir_gateway.py
src/uir/: __init__.py  constants.py  device.py  gateway.py  simplecan.py  uimessage.py
src/uir/util/: gateway.py
